--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "react-tippy": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
