--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,21 +2,30 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ master ]  # Or 'main' depending on your default branch
+    branches: [ master ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Clear build cache
+        run: rm -rf node_modules/.cache
+      
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
+      
       - run: npm ci
       - run: npm run build
-      - uses: peaceiris/actions-gh-pages@v3
+      
+      - name: Deploy to GH Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           enable_jekyll: false
           keep_files: false
+          dotfiles: true  # Ensures .nojekyll is deployed
